add music ontology

--- a/views/home.mustache
+++ b/views/home.mustache
@@ -44,7 +44,7 @@
             Triple Builder
 
         </h1>
-        <h5>A tool by <a class="has-text-link" href="http://semlab.io">Semantic Labs</a></h5>
+        <h5>A tool by <a class="has-text-link" href="http://semlab.io">Semantic Lab @ Pratt</a></h5>
       </div>
 
 
